fix: show static bg image on mobile instead of hidden video

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -57,6 +57,12 @@
   .home-video-bg {
     display: none;
   }
+
+  .home {
+    background-image: url('/main.webp');
+    background-size: cover;
+    background-position: center;
+  }
 }
 
 /* 어두운 오버레이 */
